Some updates in Project Team

--- a/latex-template/samplepaper.tex
+++ b/latex-template/samplepaper.tex
@@ -51,7 +51,34 @@ We develop a business case to disclose the potential of this project. The study 
 
 \section{Project Plan}
 \section{Project Team}
+The project team consists of two persons. The following roles have been assigned to reflect individual strengths and competences:\\
 
+
+\renewcommand\arraystretch{2}
+\begin{tabular}{c|cc}
+	Name& Role& Contact\\
+	\hline
+	Martin Hashem& Project Manager& martin.hashem@rwth-aachen.de\\
+	& Backend Architect& \\ 
+	Xiangan Chen& Quality Manager& xiangan.chen@rwth-aachen.de\\
+	& Frontend Architect & \\
+\end{tabular}
+\\\\[2pt]
+In addition a team member is assigned to each milestone in the project, who is primarily
+responsible, that the requirements and goals of the milestone are met in time with sufficient quality. The responsibilities are stated in the following table:\\
+
+\begin{tabular}{lc}
+	Milestone& Chief Responsibility\\
+	\hline
+	Project initiation document& Xiangan Chen\\
+	Requirement analysis document& Xiangan Chen\\
+	Design and proof of concept& Martin Hashem\\
+	Sprint 1& Martin Hashem\\
+	Sprint 2& Xiangan Chen\\
+	Sprint 3& Martin Hashem\\
+	Assessment& Xiangan Chen\\
+	Final Documents& Martin Hashem\\
+\end{tabular}
 
 
 % Start bibliography
