--- a/Project Initiation.tex
+++ b/Project Initiation.tex
@@ -154,6 +154,6 @@ responsible, that the requirements and goals of the milestone are met in time wi
 
 % Start bibliography
 \bibliographystyle{alpha}
-\bibliography{literature}
+\bibliography{Project Initiation}
 
 \end{document}
