--- a/ProjectInitiation.tex
+++ b/ProjectInitiation.tex
@@ -45,7 +45,7 @@ The current situation in process mining eventlogs using the Alpha algorithm is v
 \subsection{Scope}
 The main goal of this project is to create a web application that provides callculations with the Alpha algorithm and can prepare the data using the Map-Reduce. The project contains these tasks:\\
 \begin{itemize}
-	\item[$\cdot$] \textbf{Code required:} Integrating the system Hadoop into the pm4py interface and read files from it
+	\item[\HUGE $\cdot$] \textbf{Code required:} Integrating the system Hadoop into the pm4py interface and read files from it
 	\item[$\cdot$] \textbf{Code required:} Run the Alpha algorithm utilizing map-reduce 
 	\item[$\cdot$] \textbf{Code required:} Reading in logs and upload them into Hadoop
 \end{itemize}
@@ -63,7 +63,7 @@ For our project we mostly rely on well-established open source technology. This 
 
 
 \begin{itemize}
-\item Python 3.6 as back end programming language
+\item Python 3.7 as back end programming language
 \item pm4py python library as process mining toolkit
 \item Flask as web framework
 \item Hadoop as big data processing and distributed computation framework
