--- a/ProjectInitiation.bib
+++ b/ProjectInitiation.bib
@@ -5,3 +5,18 @@ Reduce",
 	JOURNAL = {ResearchGate Conferance},
 	MONTH = "March",
 	YEAR = {2014}	}
+
+@misc{pads,
+  title        = {RWTH Process and Data Science group},
+  organization = {http://www.pads.rwth-aachen.de/}
+}
+
+@misc{FIT,
+  title        = {Fraunhofer FIT process mining group},
+  organization = {https://www.fit.fraunhofer.de/en/fb/risk/process-mining.html}
+}
+
+@misc{Hadoop,
+  title = {APACHE hadoop},
+  organization = {http://hadoop.apache.org/docs/stable/}
+}
