--- a/ProjectInitiation.bib
+++ b/ProjectInitiation.bib
@@ -8,15 +8,15 @@ Reduce",
 
 @misc{pads,
   title        = {RWTH Process and Data Science group},
-  organization = {http://www.pads.rwth-aachen.de/}
+  author = {http://www.pads.rwth-aachen.de/}
 }
 
 @misc{FIT,
   title        = {Fraunhofer FIT process mining group},
-  organization = {https://www.fit.fraunhofer.de/en/fb/risk/process-mining.html}
+  author = {https://www.fit.fraunhofer.de/en/fb/risk/process-mining.html}
 }
 
 @misc{Hadoop,
   title = {APACHE hadoop},
-  organization = {http://hadoop.apache.org/docs/stable/}
+  author = {http://hadoop.apache.org/docs/stable/}
 }
