change yet again

--- a/ProjectInitiation.bib
+++ b/ProjectInitiation.bib
@@ -7,16 +7,16 @@ Reduce",
 	YEAR = {2014}	}
 
 @misc{pads,
-  title        = {RWTH Process and Data Science group},
-  author = {http://www.pads.rwth-aachen.de/}
+  author        = {RWTH Process and Data Science group},
+  title = {http://www.pads.rwth-aachen.de/}
 }
 
 @misc{FIT,
-  title        = {Fraunhofer FIT process mining group},
-  author = {https://www.fit.fraunhofer.de/en/fb/risk/process-mining.html}
+  author        = {Fraunhofer FIT process mining group},
+  title = {https://www.fit.fraunhofer.de/en/fb/risk/process-mining.html}
 }
 
 @misc{Hadoop,
-  title = {APACHE hadoop},
-  author = {http://hadoop.apache.org/docs/stable/}
+  author = {APACHE hadoop},
+  title = {http://hadoop.apache.org/docs/stable/}
 }
