--- a/ProjectInitiation.bib
+++ b/ProjectInitiation.bib
@@ -20,3 +20,13 @@ Reduce",
   author = {APACHE hadoop},
   title = {http://hadoop.apache.org/docs/stable/}
 }
+
+@misc{Flask,
+  author = {Flask},
+  title = {http://flask.pocoo.org/docs/1.0/}
+}
+
+@misc{Docker,
+  author = {docker enterprise},
+  title = {https://www.docker.com/}
+}
