--- a/ProjectInitiation.tex
+++ b/ProjectInitiation.tex
@@ -43,48 +43,46 @@ We develop a business case to disclose the potential of this project. The study 
 \subsection{Initial Situation}
 The current situation in process mining eventlogs using the Alpha algorithm is very centralized. All eventlogs are pushed together into one computation unit, eating up a big amout of resources, both in used space and computation time. The optimization of this is the main task.
 \subsection{Scope}
-The main goal of this project is to create a web application that provides callculations with the Alpha algorithm and can prepare the data using the Map-Reduce. The project contains these tasks:\\
+The main goal of this project is to create a web application that provides calculations with the Alpha algorithm and can prepare the data using the Map-Reduce. The project contains these tasks:\\
 \begin{itemize}
-	\item[\Large $\cdot$] \textbf{Code required:} Integrating the system Hadoop into the pm4py interface and read files from it
-	\item[\Large $\cdot$] \textbf{Code required:} Run the Alpha algorithm utilizing map-reduce 
+	\item[\Large $\cdot$] \textbf{Code required:} Intergrating the system Hadoop into the pm4py interface and read files from it
+	\item[\Large $\cdot$] \textbf{Code required:} Run the Alpha algorithm utilizing Map-Reduce 
 	\item[\Large $\cdot$] \textbf{Code required:} Reading in logs and upload them into Hadoop
 \end{itemize}
-The web service is to be accessed by a standart browser and needs to provide the folowing functionalities:
+The web service is to be accessed by a standard browser and needs to provide the folowing functionalities:
 \begin{itemize}
-	\item[\Large $\cdot$] Upload eventlogs in either CSV or XES format to the Hadoop system
+	\item[\Large $\cdot$] Upload event logs in either CSV or XES format into the Hadoop system
 	\item[\Large $\cdot$] Front end links to existing algorithms for further processing
-	\item[\Large $\cdot$] Do map –reduce computations to run the alpha algorithm
+	\item[\Large $\cdot$] Do Map-Reduce computations to run the alpha algorithm
 	\item[\Large $\cdot$] Download the files onto local system
 \end{itemize}
 Additionally these documentations will be provided to bring insights to our software development cycle:
 \begin{itemize}
 	\item[\Large $\cdot$]  Project initiation document
-	\item[\Large $\cdot$]  Requirement analysis document
 	\item[\Large $\cdot$]  Design document
 	\item[\Large $\cdot$]  Software documentation
 \end{itemize}
 \subsection{Key Benefits}
-The current scope of mining in Big Data is slow and centralized. Using map-reduce in combination with the Alpha algorithm, callculations can be deffered to more, smaller instances and also reduce overhead in transferring the events. Depending on the amount of  map-reduce stages that are implemented, there can be significantly less time used during the mining process, due to the parallized nature of the approach. \cite{mapReduce}
+The current scope of mining in Big Data is slow and centralized. Using map-reduce in combination with the Alpha algorithm, calculations can be deffered to more, smaller instances and also reduce overhead in transferring the events. Depending on the amount of  map-reduce stages that are implemented, there can be significantly less time used during the mining process, due to the parallized nature of the approach. \cite{mapReduce}
 \section{Feasibility Study}
 
 \subsection{Theoretical Point of View}
-A paper by Assadipour\cite{mapReduce} suggests that using a decentralized approach for process mining using the Alpha algorithm by splitting the callculations into smaller tasks available to smaller instances. \\ \ \\
+A paper by Assadipour\cite{mapReduce} suggests that using a decentralized approach for process mining using the Alpha algorithm by splitting the calculations into smaller tasks available to smaller instances. \\ \ \\
 The Alpha algorithm takes eventlogs and generates a Petri net model including an initial and final mark. The main purpose of the Alpha algorithm is to portray the relations between activities, but comes with the flaw of not finding self loops.  \\ \ \\
-Map-Reduce is a technique to allow the user to have a scalable callculation on a distributed system. By first mapping events to an identifier and then reducing the map to its relevant values, the amount of needed data shrinks. Here the reductions prepare the data for the Alpha algorithm, removing the overhead of finding the traces first.
+Map-Reduce is a technique to allow the user to have a scalable calculation on a distributed system. By first mapping events to an identifier and then reducing the map to its relevant values, the amount of needed data shrinks. Here the reductions prepare the data for the Alpha algorithm, removing the overhead of finding the traces first.
 \subsection{Technical Point of View}
 For our project we mostly rely on well-established open source technology. This includes primarily the following tools:\\
 
-
 \begin{itemize}
-	\item[\Large $\cdot$]   Python 3.7 as back end programming language
+	\item[\Large $\cdot$]   Python 3.6 as back end programming language
 	\item[\Large $\cdot$]   pm4py python library as process mining toolkit
 	\item[\Large $\cdot$]   Flask as web framework
 	\item[\Large $\cdot$]   Hadoop as big data processing and distributed computation framework
-	\item[\Large $\cdot$]   Docker as virtual machine and deploy platform
+	\item[\Large $\cdot$]   Docker as virtual machine and deploy platform\\
 \end{itemize}
 
 \noindent
-The pm4py library is a joint effort of the Fraunhofer FIT process mining group\cite{FIT} and the RWTH Process and Data Science group\cite{pads}, which supports state-of-the-art process mining algorithms in python. It is completely open source and intended to be used in both academic and industry projects.\\
+The pm4py library is a joint effort of the Fraunhofer FIT process mining group\cite{FIT} and the RWTH Process and Data Science group\cite{pads}, which supports state-of-the-art process mining algorithms in python. It is completely open source and intended to be used in both academic and industrial projects.\\
 
 \noindent
 Flask\cite{Flask} is a micro web framework written in Python. It is classified as a microframework because it does not require particular tools or libraries. It has no database abstraction layer, form validation, or any other components where pre-existing third-party libraries provide common functions. It is very suitable for our web application.\\
