--- a/ProjectInitiation.tex
+++ b/ProjectInitiation.tex
@@ -59,6 +59,7 @@ The web service is to be accessed by a standard browser and needs to provide the
 Additionally these documentations will be provided to bring insights to our software development cycle:
 \begin{itemize}
 	\item[\Large $\cdot$]  Project initiation document
+	\item[\Large $\cdot$]  Requirements analysis document
 	\item[\Large $\cdot$]  Design document
 	\item[\Large $\cdot$]  Software documentation
 \end{itemize}
