--- a/DesignDocument.tex
+++ b/DesignDocument.tex
@@ -77,19 +77,17 @@ The web service is to be accessed by a standard browser and needs to provide the
 
 \section{Design Considerations}
 \subsection{Assumptions and Dependencies}
-
+(Martin)
 \subsection{General Constraints}
-
+(Martin)
 \subsection{Goals and Guidelines}
-
+(Xiangan)
 \subsection{Development Methods}
+(Xiangan)
 
 \section{Architectural Strategies}
-
 \section{System Architecture}
-
 \section{Policies and Tactics}
-
 \section{Detailed System Design}
 
 
