--- a/Documentation/DesignDocument.tex
+++ b/Documentation/DesignDocument.tex
@@ -32,7 +32,7 @@ RWTH Aachen \\
 %150--250 words.
 %\end{abstract}
 %
-%	
+%
 %
 \section{Introduction}
 Process mining is an approach to extract process models from event logs. Since the distributed nature of modern information systems, event logs are likely to be distributed among different physical machines. Map-Reduce is a scalable approach for efficient computations on distributed data. In this Python application we will present the main idea of a Map-Reduce implementation of the Alpha process mining algorithm, to take advantage of the scalability of the Map-Reduce approach.\\
@@ -78,16 +78,22 @@ The web service is to be accessed by a standard browser and needs to provide the
 
 \section{Design Considerations}
 \subsection{Assumptions and Dependencies}
-(Martin)
+For an easy deployment for our entire system, we decided to use Docker, since it also is used for the distributed filesystem Hadoop. This Module will also be conform with PM4py and will share an interface with it. For this integration the programming language will be Python and for the webframework we choose the minimal framework Flask, for a resource friendly environment. \\
+
+\noindent
+The standard setup will be a single system Hadoop node, but it can be easily changed to multiple (existing) nodes. A deploy script will be available for this in Linux (Debian, Ubuntu will be supported for sure) , and as parameters only the ip's / addresses of the nodes will be neccessary [this might be subject to change].
+
 \subsection{General Constraints}
-(Martin)
+
+The deployment is set for a server of unknown size, so a general minimum will be set, and tested for the deploy. To be integratable into PM4py the language for front and back end will be Python. The front end will needed to be accessibil from a standard internet browser and multiple instances can be expected, therefore minimal framework is needed. The server backend will need to calculate the MapReduce for the eventlogs and then use the Alpha-Algorithm on the MapReduce logs. The outputted petri net is needed to be ready for further access in PM4py. It needs to be downloadable from the frontend as well.
+
 \subsection{Goals and Guidelines}
 
 \begin{itemize}
 	\item[\Large $\cdot$] Simple:
 	One of the main guidelines through our system design is simple. From the frontend part to the backend, from the UIs to the layout, we set the simpleness on the crucial level.\\
 	\item[\Large $\cdot$] Resource-saving:
-	The other goal of our design is resource-saving. Not only in our implement but also the outcoming software, we consume resources as little as possible, inclusive CPU computing time , storage and server occupancy. 
+	The other goal of our design is resource-saving. Not only in our implement but also the outcoming software, we consume resources as little as possible, inclusive CPU computing time , storage and server occupancy.
 \end{itemize}
 
 \subsection{Development Methods}
@@ -97,6 +103,56 @@ Scrum is our first choice of development method. Since we have a small team, so 
 \section{System Architecture}
 \section{Policies and Tactics}
 \section{Detailed System Design}
+\subsection{hadoopManager}
+\begin{itemize}
+\item[Name:] pushData
+\item[Returns:] Boolean
+\item[Arguments:] List
+\item[Description:] takes a list of events (from the event log) to push into the Hadoop filesystem, and returns a boolean with the success from the push.
+\end{itemize}
+
+\begin{itemize}
+\item[Name:] getData
+\item[Returns:] List
+\item[Arguments:] -
+\item[Description:] returns the entire list of saved events.
+\end{itemize}
+
+\subsection{Alpha}
+\begin{itemize}
+\item[Name:] mapReduce
+\item[Returns:] Dict/Map
+\item[Arguments:] List
+\item[Description:] calculates the MapReduce of a given list of events.
+\end{itemize}
+
+\begin{itemize}
+\item[Name:] aAlgo
+\item[Returns:] Net, initMark, finMark
+\item[Arguments:] Dict/Map
+\item[Description:] Takes a MapReduced eventlog and mines the process as a Petri Net.
+\end{itemize}
+
+\subsection{backendManager}
+\begin{itemize}
+\item[Name:] getLog
+\item[Returns:] List
+\item[Arguments:] -
+\item[Description:] to be called from outside the backend. Returns the log-list from the Hadoop system.
+\end{itemize}
+\begin{itemize}
+\item[Name:] alphaAlgo
+\item[Returns:] Net, initMark, finMark
+\item[Arguments:] List
+\item[Description:] takes a List of events and then returns the mined Perti Net. The MR will be calculated, a call for the MR-Method is not needed.
+\end{itemize}
+
+\begin{itemize}
+\item[Name:] getPetri
+\item[Returns:] Net, initMark, finMark
+\item[Arguments:] -
+\item[Description:] takes the list of events in Hadoop and calculates the Perti Net over all of them.
+\end{itemize}
 
 
 
