--- a/Documentation/DesignDocument.tex
+++ b/Documentation/DesignDocument.tex
@@ -90,9 +90,9 @@ The deployment is set for a server of unknown size, so a general minimum will be
 \subsection{Goals and Guidelines}
 
 \begin{itemize}
-	\item[\Large $\cdot$] Simple:
+	\item[\Large $\cdot$] \textbf{Simple:}
 	One of the main guidelines through our system design is simple. From the frontend part to the backend, from the UIs to the layout, we set the simpleness on the crucial level.\\
-	\item[\Large $\cdot$] Resource-saving:
+	\item[\Large $\cdot$] \textbf{Resource-saving:}
 	The other goal of our design is resource-saving. Not only in our implement but also the outcoming software, we consume resources as little as possible, inclusive CPU computing time , storage and server occupancy.
 \end{itemize}
 
