removing some comments

--- a/Documentation/DesignDocument.tex
+++ b/Documentation/DesignDocument.tex
@@ -1,39 +1,22 @@
-% This is samplepaper.tex, a sample chapter demonstrating the
-% LLNCS macro package for Springer Computer Science proceedings;
-% Version 2.20 of 2017/10/04
-%
 \documentclass[runningheads]{llncs}
-% Add your own packages here
+% Packages
 \usepackage{graphicx}
 \usepackage{url}
-%
+
 \begin{document}
-%
+
 \title{Process Discovery using Big Data stack - Implementing the Alpha Algorithm with Map-Reduce}
 \subtitle{Design Specification Document}
-%
-%\titlerunning{Abbreviated paper title}
-% If the paper title is too long for the running head, you can set
-% an abbreviated paper title here
-%
 
 \author{Martin Hashem, Xiangan Chen}
 
 \institute{
 \today \\
 RWTH Aachen \\
-%\date{01 Apr 2019}
 }
-%
-\maketitle              % typeset the header of the contribution
-%
-%\begin{abstract}
-%The abstract should briefly summarize the contents of the paper in
-%150--250 words.
-%\end{abstract}
-%
-%
-%
+% End of title
+\maketitle
+
 \section{Introduction}
 Process mining is an approach to extract process models from event logs. Since the distributed nature of modern information systems, event logs are likely to be distributed among different physical machines. Map-Reduce is a scalable approach for efficient computations on distributed data. In this Python application we will present the main idea of a Map-Reduce implementation of the Alpha process mining algorithm, to take advantage of the scalability of the Map-Reduce approach.\\
 
