adding Class Net

--- a/Documentation/DesignDocument.tex
+++ b/Documentation/DesignDocument.tex
@@ -86,6 +86,13 @@ Scrum is our first choice of development method. Since we have a small team, so 
 \section{System Architecture}
 \section{Policies and Tactics}
 \section{Detailed System Design}
+\subsection{Net}
+\begin{itemize}
+	\item[Name:] Net
+	\item[Type:] Class
+	\item[Attributes:] places, transitions, arcs
+	\item[Description:] Inherited Petri Nets from PM4py for further use in PM4py.
+\end{itemize}
 \subsection{hadoopManager}
 \begin{itemize}
 \item[Name:] pushData
