--- a/Documentation/DesignDocument.tex
+++ b/Documentation/DesignDocument.tex
@@ -84,7 +84,11 @@ The deployment is set for a server of unknown size, so a general minimum will be
 Scrum is our first choice of development method. Since we have a small team, so an agile and intensive development method should fit us better. So instead of the classic waterfall model development, our team prefer Scrum. Scrum is a lightweight, iterative and incremental framework for managing product development. And enables our team to self-organize by encouraging physical co-location or close online collaboration of all team members, as well as daily face-to-face communication among all team members.\cite{wiki:xxx}
 
 \section{System Architecture}
+\includegraphics[scale=.35]{HighLevelDesign.png} \\ \ \\
+\includegraphics[scale=.35]{Backend.png} \\ \ \\
+\includegraphics[scale=.35]{WebApp.png}
 \section{Policies and Tactics}
+
 \section{Detailed System Design}
 \subsection{Net}
 \begin{itemize}
