--- a/Documentation/DesignDocument.tex
+++ b/Documentation/DesignDocument.tex
@@ -89,6 +89,14 @@ Scrum is our first choice of development method. Since we have a small team, so 
 \includegraphics[scale=.35]{WebApp.png}
 \section{Policies and Tactics}
 
+\begin{itemize}
+	\item[\Large $\cdot$] We use Python 3.6 as our interpreter, since it fits best with PM4py library, which is the main library of our very project.\\
+	\item[\Large $\cdot$] Resource friendly trades computing time off. We use very few resources instead of chasing the high efficiency.\\
+	\item[\Large $\cdot$] Our team use VS Code from Microsoft as editor and set the tab size as 2 blanks instead of 4 spaces.\\
+	\item[\Large $\cdot$] We plan to test the software when one of the functions is finished. It should be executable as long as the functions are complete.\\
+	\item[\Large $\cdot$] We use Github as our version control tool, and Trello as our backlog and to-do list tool. They keep our codes and plans safe and neat. We update them regularly.
+\end{itemize}
+
 \section{Detailed System Design}
 \subsection{login}
 \begin{itemize}
@@ -107,7 +115,7 @@ Scrum is our first choice of development method. Since we have a small team, so 
 
 \begin{itemize}
 	\item[Name:] reset
-	\item[Returns:] -
+	\item[Returns:] Boolean
 	\item[Arguments:] -
 	\item[Description:] clears all filled items of the login page.
 \end{itemize}
@@ -123,7 +131,7 @@ Scrum is our first choice of development method. Since we have a small team, so 
 
 \begin{itemize}
 	\item[Name:] reset
-	\item[Returns:] -
+	\item[Returns:] Boolean
 	\item[Arguments:] -
 	\item[Description:] clears all filled items of the signIn page.
 \end{itemize}
@@ -138,7 +146,7 @@ Scrum is our first choice of development method. Since we have a small team, so 
 
 \begin{itemize}
 	\item[Name:] reset
-	\item[Returns:] -
+	\item[Returns:] Boolean
 	\item[Arguments:] -
 	\item[Description:] deletes the uploaded file and ready to recieve a new one.
 \end{itemize}
