--- a/Documentation/Usermanual.tex
+++ b/Documentation/Usermanual.tex
@@ -70,6 +70,18 @@ The main areas are:\\
 \noindent
 \textbf{3. Main Window} displays the main content of the application. On the upload page there are upload bar and raw data preview box. After selected the file of right format, the content of the uploading file will be showed in the box.
 
+\section{Installation}
+The version control of this project depends on Git, and our team chose to use GitHub to manage our source code and releases.\\\\
+\noindent
+To deploy our WebApp on a server, you can just go to our GitHub releases page (\textit{https://github.com/xianganc/PraktikumProcessMining/releases}), then download the \textit{setup.sh} to local, run the contents inside the .sh file like in Fig. 2.
+
+\begin{figure}[h]	
+	\centering
+	\includegraphics[scale=0.3]{setup.png}
+	\caption{}
+	\label{fig:label}
+\end{figure}
+
 \section{Upload}
 
 In this section we explain how to use the WebApp. After reading this section, you will be able to preview the to be uploaded data and upload a CSV or XES file to the server.
@@ -88,7 +100,7 @@ In this section we explain how to use the WebApp. After reading this section, yo
 If you unexpectedly select a wrong file, you can do the followings:\\\\
 \noindent
 \textbf{2.2.1 Wrong File Format\\}
-If the selected file were in the wrong format (e.g. a pdf file), then a pop-up window will show up, to notify the user for choosing a wrong file like Fig. 2.
+If the selected file were in the wrong format (e.g. a pdf file), then a pop-up window will show up, to notify the user for choosing a wrong file like Fig. 3.\\
 \begin{figure}[h]	
 	\centering
 	\includegraphics[scale=0.5]{wrong.png}
